Asyncify EVERYTHING